# packaging-linux-desktop-workshop

./: .gitignore  README.md  app.py  lib.py  pyproject.toml
killercoda/: background.sh  finish.md  foreground.sh  index.json  intro.md  step1.md  step2.md  step3.md  step4.md  step5.md
snap/: snapcraft.yaml
src/solar_roi_calculator/: __main__.py
src/test_app/: __init__.py  __main__.py
