[project]
name = "test-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Juan Luis Cano Rodríguez", email = "juan.rodriguez@canonical.com" }
]
requires-python = ">=3.12"
dependencies = [
    "test-lib",
]

[project.scripts]
test-app = "test_app:main"
test-app-gui = "test_app.__main__:main"

[project.optional-dependencies]
gui = [
    "toga>=0.5.3",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = [
    "packages/test-lib",
]

[tool.uv.sources]
test-lib = { workspace = true }

[dependency-groups]
dev = [
    "briefcase>=0.4.1",
]
