[project]
name = "solar-roi-calculator"
version = "0.1.0"
description = "Solar ROI graphical calculator"
readme = "README.md"
authors = [
    { name = "Juan Luis Cano Rodríguez", email = "juan.rodriguez@canonical.com" }
]
requires-python = ">=3.12"
dependencies = [
    "toga>=0.5.3",
    "sola-rs-roi-py",
]

[project.scripts]
solar-roi-calculator = "solar_roi_calculator.__main__:run"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=9.11.0",
    "mypy>=1.19.1",
]

[tool.uv.sources]
sola-rs-roi-py = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]
